Added redacted version of my CV to the website.

--- a/about.html
+++ b/about.html
@@ -20,8 +20,10 @@
   <p style="font-size: 26px; padding: 6px 8px 6px 16px; color: #b8bb26"> Name: <span style='color:#fe8019'> Балша </span> </p>
   <p style="font-size: 26px; padding: 6px 8px 6px 16px; color: #b8bb26"> alias: <span style='color:#fe8019'> burstw0w </p>
   <p style="font-size: 26px; padding: 6px 8px 6px 16px; color: #b8bb26"> Education:  <span style="color: #fe8019"> B.S. at Faculty of Sciences, University of Novi Sad</span></p>
+  <a href="./burstw0wREDACTED.pdf" style="font-size: 16px; padding: 6px 8px 6px 16px; color= #b8bb26">Redacted version of my CV</a>
 
-
+  <br>
+  <br>
   <div class="box">
     <div class="box-sm red"></div>
     <div class="box-sm orange"></div>
