Горски Вијенац inbound

--- a/about.html
+++ b/about.html
@@ -36,8 +36,15 @@
     <div class="box-sm purple"></div>
   </div>
 
-  <p style="color: #458588"> Радећи ово просто из забаве дођох до закључка да апсолутно немам никакав текст који бих могао овде ставити, те сада када сат откуцава поноћ седим и лупам ове речи да бих попунио читаву страницу неким текстом, са којим ћу касније моћи да се играм док га не форматирам довољно лепо да ми очи не искрваре док читам. </p>
-
+	<p style="color: #458588">Муж је бранич жене и ђетета,
+						<br>народ бранич цркве и племена;
+						<br>чест је слава, светиња народња!
+						<br>Пас свакоји своје бреме носи;
+						<br>нове нужде рађу нове силе,
+						<br>дјеиствија напрежу духове,
+						<br>стјесненија сламају громове;
+						<br>удар нађе искру у камену,
+						<br>без њега би у кам очајала.</p>
 </div>
 
 
