--- a/about.html
+++ b/about.html
@@ -36,15 +36,7 @@
     <div class="box-sm purple"></div>
   </div>
 
-	<p style="color: #458588">Муж је бранич жене и ђетета,
-						<br>народ бранич цркве и племена;
-						<br>чест је слава, светиња народња!
-						<br>Пас свакоји своје бреме носи;
-						<br>нове нужде рађу нове силе,
-						<br>дјеиствија напрежу духове,
-						<br>стјесненија сламају громове;
-						<br>удар нађе искру у камену,
-						<br>без њега би у кам очајала.</p>
+	<p style="color: #458588">Карабум челавек</p>
 </div>
 
 
