Ни патике не обујем без sudo, јер није мајка пичку родила.

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="box-sm purple"></div>
   </div>
 
-	<p style="color: #458588">Карабум челавек</p>
+	<p style="color: #458588">Ни патике не обујем без sudo, јер није мајка пичку родила</p>
 </div>
 
 
