--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 	<h1 style="font-size: 30px; text-align: center; color: #fabd2f">burstw0w</h1>
 	<a href="./index.html">Home</a>
   <a href="./about.html"  style=" color: #fb4934">About</a>
+  <a href="./istorija.html">Историја</a>
   <a href="https://github.com/burstw0w">github</a>
     <img src="burstw0w.jpg" alt="burstw0w" width="150" height="150" class="center" style="border: 2px solid #504945;">	
 </div>
