--- a/istorija.html
+++ b/istorija.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>burstw0w's main page</title>
+	<title>Историја ЦГ</title>
 </head>
 <body>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,16 +12,18 @@
 
 <div class="sidenav">
 	<h1 style="font-size: 30px; text-align: center; color: #fabd2f">burstw0w</h1>
-	<a href="./index.html" style=" color: #fb4934">Home</a>
+	<a href="./index.html">Home</a>
   <a href="./about.html">About</a>
-  <a href="./istorija.html">Историја</a>
+  <a href="./istorija.html" style=" color: #fb4934">Историја</a>
   <a href="https://github.com/burstw0w">github</a>
   <img src="burstw0w.jpg" alt="burstw0w" width="150" height="150" class="center" style="border: 2px solid #504945;">
 </div>
 
 <!-- Page content -->
 <div class="main">
-  <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Blog pages: </p>
+  <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Текстови: </p>
+
+  <a href="./istorija/tudjemil.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1042] Битка код Бара/Битка на Туђемилском пољу</a>
 </div>
 
 </body>
