Поправио боје, да не будем педерчина

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
     <div class="box-sm red"></div>
     <div class="box-sm orange"></div>
     <div class="box-sm yellow "></div>
+    <div class="box-sm bgf "></div>
     <div class="box-sm green "></div>
     <div class="box-sm blue "></div>
     <div class="box-sm purple"></div>
