--- a/istorija.html
+++ b/istorija.html
@@ -23,7 +23,8 @@
 <div class="main">
   <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Текстови: </p>
 
-  <a href="./istorija/tudjemil.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1042] Битка код Бара/Битка на Туђемилском пољу</a>
+  <a href="./istorija/tudjemil.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1042] Битка код Бара/Битка на Туђемилском пољу</a><br>
+  <a href="./istorija/lottomano.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1599] L'Ottomano, Lazaro Soranzo - Опис Османског царства</a>
 </div>
 
 </body>
