Added Vasilije and Dubrovnik

--- a/istorija.html
+++ b/istorija.html
@@ -24,7 +24,8 @@
   <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Текстови: </p>
 
   <a href="./istorija/tudjemil.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1042] Битка код Бара/Битка на Туђемилском пољу</a><br>
-  <a href="./istorija/lottomano.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1599] L'Ottomano, Lazaro Soranzo - Опис Османског царства</a>
+  <a href="./istorija/lottomano.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1599] L'Ottomano, Lazaro Soranzo - Опис Османског царства</a><br>
+  <a href="./istorija/vasilijedubrovnik.html" style="font-size: 20px; padding: 6px 8px 6px 16px; color: #458588">[1763] Црногорски митрополити траже новчану помоћ од Дубровника за народ и цркву</a><br>
 </div>
 
 </body>
