--- a/istorija/lottomano.html
+++ b/istorija/lottomano.html
@@ -34,7 +34,7 @@
 <br>
   Аутор описује народ данашње Црне Горе, спомиње брђанска племена и херцеговачки устанак. </p>
 </div>
-<img src="lottomano.png" style='height: 100%; width: 100%; object-fit: contain' alt="Приказ из књиге „L'ottomano">
+<img src="lottomano.png" style='height: 100%; width: 100%; object-fit: contain' alt="Приказ из књиге L'ottomano ">
 </div>
 
 </body>
