--- a/istorija.html
+++ b/istorija.html
@@ -25,6 +25,7 @@
 
   <a href="./istorija/tudjemil.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1042] Битка код Бара/Битка на Туђемилском пољу</a><br>
   <a href="./istorija/susanj.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1412] Ђурађ Црнојевић дарива властелину Медлу Анђеловићу село Шушањ</a><br>
+  <a href="./istorija/vukovic.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1520] Синаксар, војвода Божидар Вуковић о црквеним текстовима</a><br>
   <a href="./istorija/lottomano.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1599] L'Ottomano, Lazaro Soranzo - Опис Османског царства</a><br>
   <a href="./istorija/vasilijedubrovnik.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1763] Црногорски митрополити траже новчану помоћ од Дубровника за народ и цркву</a><br>
 </div>
