--- a/istorija.html
+++ b/istorija.html
@@ -20,7 +20,7 @@
 </div>
 
 <!-- Page content -->
-<div class="main">
+<div class="lynx">
   <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Текстови: </p>
 
   <a href="./istorija/tudjemil.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1042] Битка код Бара/Битка на Туђемилском пољу</a><br>
