--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <p style="font-size: 25px; padding: 18px 8px 6px 16px; color: #b8bb26"> Name: <span style='color:#fe8019'> Балша </span> </p>
   <p style="font-size: 25px; padding: 6px 8px 6px 16px; color: #b8bb26"> alias: <span style='color:#fe8019'> burstw0w </p>
   <p style="font-size: 25px; padding: 6px 8px 6px 16px; color: #b8bb26"> Education:  <span style="color: #fe8019"> B.S. at Faculty of Sciences, University of Novi Sad</span></p>
-  <a href="./burstw0wREDACTED.pdf" style="font-size: 16px; padding: 6px 8px 6px 16px; color= #b8bb26; text-decoration: underline;">Redacted version of my CV</a>
+  <a href="./burstw0wREDACTED.pdf" style="font-size: 16px; padding: 6px 8px 6px 16px; color=#b8bb26; text-decoration: underline;">Redacted version of my CV</a>
 
   <br>
   <br>
@@ -38,7 +38,7 @@
     <!-- <div class="box-sm purple"></div>-->
   </div>
 
-	<p style="color: #458588">Ни патике не обујем без sudo, јер није мајка пичку родила.</p>
+	<p style="color: #458588; padding: 0px 0px 0px 16px">Ни патике не обујем без sudo, јер није мајка пичку родила.</p>
 </div>
 
 
