Откривање гроба краља Николе

--- a/istorija.html
+++ b/istorija.html
@@ -31,6 +31,7 @@
   <a href="./istorija/mateja.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1744] Осорски бискуп Матеј Караман пише о Србима православне вјере у Далмацији</a><br>
   <a href="./istorija/vasilijedubrovnik.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1763] Црногорски митрополити траже новчану помоћ од Дубровника за народ и цркву</a><br>
   <a href="./istorija/savaplaton.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1776] Владика Сава се жали митрополиту московском Платону</a><br>
+  <a href="./istorija/nikola.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[1989] Откривање ковчега краља Николе</a><br>
 </div>
 
 </body>
