--- a/istorija/savaplaton.html
+++ b/istorija/savaplaton.html
@@ -21,7 +21,7 @@
 
 <!-- Page content -->
 <div class="main">
-  <p style="font-size: 25px; padding: 6px 8px 6px 16px; color: #b8bb26">[1599] L'Ottomano, Lazaro Soranzo - Опис Османског царства</p>
+  <p style="font-size: 25px; padding: 6px 8px 6px 16px; color: #b8bb26">[1776] Владика Сава се жали митрополиту московском Платону</p>
 
   <p style="font-size: 20px; padding: 6px 8px 6px 16px; color: #fe8019">Пријевод:</p>
 <div class="tekst">
