--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <!-- Page content -->
 <div class="main">
   <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Blog pages: </p>
+
+  <a href="./blog/UltimaJS.html" style="font-size: 20px; padding: 6px 8px 6px 16px">UltimaJS, ил шта год. Raycasting јбг</a><br>
 </div>
 
 </body>
