--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
   </div>
 
 	<p style="color: #458588; padding: 0px 0px 0px 16px">Ни патике не обујем без sudo, јер није мајка пичку родила.</p>
+	<p style="color: #458588; padding: 0px 0px 0px 16px">Апсолутни доминатор шаха и победник дискусија на Talk страници Википедије</p>
 </div>
 
 
