--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="main">
   <p style="font-size: 30px; padding: 6px 8px 6px 16px; color: #b8bb26"> Blog pages: </p>
 
-  <a href="./blog/UltimaJS.html" style="font-size: 20px; padding: 6px 8px 6px 16px">UltimaJS, ил шта год. Raycasting јбг</a><br>
+  <a href="./blog/UltimaJS.html" style="font-size: 20px; padding: 6px 8px 6px 16px">[09.02.2023.]UltimaJS, ил шта год. Raycasting јбг</a><br>
 </div>
 
 </body>
